# lumina

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/core/: models.py
app/db/: database.py
app/services/: cv_parser.py  email_service.py  esco_client.py  job_title_matcher.py  llm_client.py  llm_utils.py  skill_gap_analyzer.py
app/utils/: classifier.py
docker/: app.Dockerfile  etl.Dockerfile
docs/assets/: matching_logic.md  roadmap_generator.md  skills.md
docs/planing_docs/: Impact_Effort_Matrix copy.md  Implementation_Instructions.md  Interview Synthesis - Myanmar Career Mentorship.md  Mentorship_Interviews copy.md  Opportunity_Solution_Tree copy.md  Problem_Statement copy.md  Product_Design_Doc.md  action_steps.md  engineering.md  product.md  ui.md  user_comments.md
etl/: main.py  pyproject.toml
etl/extract/: esco_api.py
etl/load/: postgres.py
etl/transform/: mappings.py
scripts/: build_occupations_db.py  build_skills_taxonomy.py  fetch_job_titles.py  test_cv_parser.py  test_matcher.py
static/: app.js  index.html  style.css
