[project]
name = "proofpath"
version = "0.4.0"
description = "ProofPath backend — open-corpus title matching plus free, deterministic nearest-archetype sprint content. No LLM, no network call, no API key (see action_steps.md #10)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
    "spacy>=3.8.14",
    "httpx>=0.27",
    "python-dotenv>=1.0.1",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.18",
    "en-core-web-sm",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.uv.workspace]
members = [
    "etl",
]

